Point In Triangle

--- a/Physics_Exercises/Physics_Exercises.vcxproj
+++ b/Physics_Exercises/Physics_Exercises.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CPrint.h" />
     <ClInclude Include="CVector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
